Moved the build tcl script to build template

--- a/gpio_led/PL/CMakeLists.txt
+++ b/gpio_led/PL/CMakeLists.txt
@@ -6,8 +6,8 @@ set(VIVADO_PROJECT_NAME "gpio_led_1")
 set(VIVADO_PROJECT_DIR "${CMAKE_SOURCE_DIR}/${VIVADO_PROJECT_NAME}")
 set(VIVADO_PROJECT_FILE "${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.xpr")
 set(OUTPUT_DIR "${CMAKE_BINARY_DIR}/output")
-# Build directory for Vivado generated files (cache, gen, runs, etc.)
-set(VIVADO_BUILD_DIR "${CMAKE_BINARY_DIR}/vivado_gen")
+set(OUTPUT_BITSTREAM_NAME "gpio_demo")
+set(OUTPUT_HWH_NAME "gpio_demo")
 
 # Find Vivado
 find_program(VIVADO_EXECUTABLE
@@ -40,9 +40,8 @@ execute_process(
 
 message(STATUS "Vivado version info: ${VIVADO_VERSION_OUTPUT}")
 
-# Create output directories
+# Create output directory
 file(MAKE_DIRECTORY ${OUTPUT_DIR})
-file(MAKE_DIRECTORY ${VIVADO_BUILD_DIR})
 
 # Get number of CPU cores for parallel jobs
 include(ProcessorCount)
@@ -51,80 +50,18 @@ if(NUM_JOBS EQUAL 0)
     set(NUM_JOBS 4)
 endif()
 
-# TCL script for building the project
-# Configure the TCL script template with CMake variables
+# Get path to build_utils directory (at project root)
+get_filename_component(PROJECT_ROOT "${CMAKE_SOURCE_DIR}" ABSOLUTE)
+# Navigate up to project root: gpio_led/PL -> gpio_led -> project root
+get_filename_component(PROJECT_ROOT "${PROJECT_ROOT}/../.." ABSOLUTE)
+set(BUILD_UTILS_DIR "${PROJECT_ROOT}/build_utils")
+
+# TCL script for building the project - use generic script from build_utils
 set(BUILD_TCL_SCRIPT "${CMAKE_BINARY_DIR}/build_project.tcl")
 configure_file(
-    "${CMAKE_SOURCE_DIR}/build_project.tcl.in"
+    "${BUILD_UTILS_DIR}/build_project.tcl.in"
     "${BUILD_TCL_SCRIPT}"
     @ONLY
-)
-
-# Create a setup script to redirect Vivado outputs to build directory
-set(SETUP_TCL_SCRIPT "${CMAKE_BINARY_DIR}/setup_vivado_outputs.tcl")
-configure_file(
-    "${CMAKE_SOURCE_DIR}/setup_vivado_outputs.tcl.in"
-    "${SETUP_TCL_SCRIPT}"
-    @ONLY
-)
-
-# Setup script to create symlinks (using bash for better reliability)
-set(SETUP_SCRIPT "${CMAKE_BINARY_DIR}/setup_outputs.sh")
-file(WRITE ${SETUP_SCRIPT}
-"#!/bin/bash
-set -e
-PROJECT_DIR=\"${VIVADO_PROJECT_DIR}\"
-PROJECT_NAME=\"${VIVADO_PROJECT_NAME}\"
-BUILD_DIR=\"${VIVADO_BUILD_DIR}\"
-
-# Create build directory structure
-mkdir -p \"\$BUILD_DIR/cache\"
-mkdir -p \"\$BUILD_DIR/gen\"
-mkdir -p \"\$BUILD_DIR/runs\"
-mkdir -p \"\$BUILD_DIR/hw\"
-mkdir -p \"\$BUILD_DIR/sim\"
-mkdir -p \"\$BUILD_DIR/ip_user_files\"
-
-# Remove existing directories/symlinks and move to build directory
-for dir in \"\$PROJECT_DIR/\${PROJECT_NAME}.cache\" \"\$PROJECT_DIR/\${PROJECT_NAME}.gen\" \"\$PROJECT_DIR/\${PROJECT_NAME}.runs\" \"\$PROJECT_DIR/\${PROJECT_NAME}.hw\" \"\$PROJECT_DIR/\${PROJECT_NAME}.sim\" \"\$PROJECT_DIR/\${PROJECT_NAME}.ip_user_files\"; do
-    if [ -e \"\$dir\" ]; then
-        if [ -L \"\$dir\" ]; then
-            # Remove existing symlink
-            rm -f \"\$dir\"
-            echo \"Removed existing symlink: \$dir\"
-        elif [ -d \"\$dir\" ]; then
-            # It's a real directory - move it to build directory
-            dir_name=\$(basename \"\$dir\")
-            target=\"\$BUILD_DIR/\$dir_name\"
-            if [ ! -e \"\$target\" ]; then
-                mv \"\$dir\" \"\$target\"
-                echo \"Moved existing directory \$dir to \$target\"
-            else
-                rm -rf \"\$dir\"
-                echo \"Removed existing directory: \$dir\"
-            fi
-        fi
-    fi
-done
-
-# Create symbolic links from project directory to build directory
-ln -sf \"\$BUILD_DIR/cache\" \"\$PROJECT_DIR/\${PROJECT_NAME}.cache\"
-ln -sf \"\$BUILD_DIR/gen\" \"\$PROJECT_DIR/\${PROJECT_NAME}.gen\"
-ln -sf \"\$BUILD_DIR/runs\" \"\$PROJECT_DIR/\${PROJECT_NAME}.runs\"
-ln -sf \"\$BUILD_DIR/hw\" \"\$PROJECT_DIR/\${PROJECT_NAME}.hw\"
-ln -sf \"\$BUILD_DIR/sim\" \"\$PROJECT_DIR/\${PROJECT_NAME}.sim\"
-ln -sf \"\$BUILD_DIR/ip_user_files\" \"\$PROJECT_DIR/\${PROJECT_NAME}.ip_user_files\"
-
-echo \"Vivado output directories redirected to: \$BUILD_DIR\"
-"
-)
-file(COPY ${SETUP_SCRIPT} DESTINATION ${CMAKE_BINARY_DIR} FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE)
-
-# Setup target to create symlinks for Vivado outputs
-add_custom_target(setup_outputs
-    COMMAND bash ${SETUP_SCRIPT}
-    COMMENT "Setting up Vivado output directories in build folder"
-    VERBATIM
 )
 
 # Custom target for synthesis
@@ -132,7 +69,6 @@ add_custom_target(synth
     COMMAND ${VIVADO_EXECUTABLE} -mode batch -source ${BUILD_TCL_SCRIPT} -log ${OUTPUT_DIR}/vivado_synth.log
     WORKING_DIRECTORY ${VIVADO_PROJECT_DIR}
     COMMENT "Running synthesis for ${VIVADO_PROJECT_NAME}"
-    DEPENDS setup_outputs
     VERBATIM
 )
 
@@ -168,25 +104,18 @@ add_custom_target(build_all
     COMMAND ${VIVADO_EXECUTABLE} -mode batch -source ${BUILD_TCL_SCRIPT} -log ${OUTPUT_DIR}/vivado_build.log
     WORKING_DIRECTORY ${VIVADO_PROJECT_DIR}
     COMMENT "Building complete project: synthesis, implementation, bitstream, XSA, and HWH"
-    DEPENDS setup_outputs
     VERBATIM
 )
 
 # Clean target - remove all generated files
 add_custom_target(clean_all
     COMMAND ${CMAKE_COMMAND} -E echo "Cleaning all generated files..."
-    # Remove Vivado generated directories and files using bash (handles missing files/dirs gracefully)
     COMMAND bash -c "rm -rf \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.cache\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.gen\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.hw\" 2>/dev/null || true"
     COMMAND bash -c "rm -rf \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.ip_user_files\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.runs\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.sim\" 2>/dev/null || true"
-    # Remove symlinks (they point to build directory)
-    COMMAND bash -c "rm -f \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.cache\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.gen\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.runs\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.hw\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.sim\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.ip_user_files\" 2>/dev/null || true"
-    # Clean build directory generated files
-    COMMAND bash -c "rm -rf \"${VIVADO_BUILD_DIR}\" 2>/dev/null || true"
     COMMAND bash -c "rm -rf \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.srcs/utils_1/imports\" 2>/dev/null || true"
     COMMAND bash -c "rm -rf \"${OUTPUT_DIR}\" 2>/dev/null || true"
     COMMAND bash -c "rm -f \"${BUILD_TCL_SCRIPT}\" 2>/dev/null || true"
     COMMAND bash -c "rm -f \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.xpr.user\" \"${VIVADO_PROJECT_DIR}/${VIVADO_PROJECT_NAME}.xpr.lock\" 2>/dev/null || true"
-    # Remove files with wildcards
     COMMAND bash -c "rm -f \"${VIVADO_PROJECT_DIR}\"/*.jou \"${VIVADO_PROJECT_DIR}\"/*.log \"${VIVADO_PROJECT_DIR}\"/*.str 2>/dev/null || true"
     COMMAND bash -c "rm -f \"${VIVADO_PROJECT_DIR}\"/*.xsa \"${VIVADO_PROJECT_DIR}\"/*.dcp \"${VIVADO_PROJECT_DIR}\"/*.pb 2>/dev/null || true"
     COMMAND bash -c "rm -f \"${VIVADO_PROJECT_DIR}\"/*.rpt \"${VIVADO_PROJECT_DIR}\"/*.vds \"${VIVADO_PROJECT_DIR}\"/*.wdf 2>/dev/null || true"
@@ -202,9 +131,9 @@ add_custom_target(clean_all
 )
 
 # Output file targets for dependency tracking
-set(BITSTREAM_FILE "${OUTPUT_DIR}/gpio_demo.bit")
+set(BITSTREAM_FILE "${OUTPUT_DIR}/${OUTPUT_BITSTREAM_NAME}.bit")
 set(XSA_FILE "${OUTPUT_DIR}/${VIVADO_PROJECT_NAME}_wrapper.xsa")
-set(HWH_FILE "${OUTPUT_DIR}/gpio_demo.hwh")
+set(HWH_FILE "${OUTPUT_DIR}/${OUTPUT_HWH_NAME}.hwh")
 
 add_custom_command(
     OUTPUT ${BITSTREAM_FILE} ${XSA_FILE} ${HWH_FILE}
@@ -213,7 +142,6 @@ add_custom_command(
     COMMENT "Generating bitstream, XSA, and HWH files"
     DEPENDS ${VIVADO_PROJECT_FILE}
 )
-
 
 # Print usage information
 message(STATUS "")
@@ -234,4 +162,3 @@ message(STATUS "Note: Use 'make build_all' for the complete build (or just 'make
 message(STATUS "")
 message(STATUS "Output files will be in: ${OUTPUT_DIR}")
 message(STATUS "")
-
